--- a/BFKSupportApp/app/src/main/res/values/strings.xml
+++ b/BFKSupportApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BFKSupportApp</string>
+    <string name="title_activity_additional_information_character">
+        AdditionalInformationCharacterActivity
+    </string>
 </resources>
